# droid-switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  SECURITY.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: backup.rs  cli.rs  factory.rs  lib.rs  main.rs  paths.rs  profile.rs  state.rs
src/commands/: add.rs  backup.rs  doctor.rs  import.rs  init.rs  list.rs  mod.rs  remove.rs  rename.rs  status.rs  sync.rs  use_.rs
tests/: cli.rs
