[package]
name = "droid-switch"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
description = "Droid Switch: switch between multiple Factory Droid accounts"
license = "MIT"
repository = "https://github.com/hqman/droid-switch"
readme = "README.md"
keywords = ["cli", "droid", "factory", "account-switcher"]
categories = ["command-line-utilities"]

[[bin]]
name = "dsw"
path = "src/main.rs"

[lib]
name = "dsw"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
comfy-table = "7"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
